Changes a few design elements, such as margin and colour of the headers. Added more white space around the offers section and fixed the glitch of the nav bar header when shrinking the screen

--- a/css/main.css
+++ b/css/main.css
@@ -17,20 +17,27 @@ header{
 }
 
 nav {
-	display: inline;
-	float:right;
+	display: block;
+	float: right;
+	width: 100%;
+	text-align: right;
+	height: 4em;
+	position: absolute;
+	right: 0;
 }
 
 .head-nav {
 	font-family: PT Sans;
 	text-transform: uppercase;
-	font-weight:700;
+	font-weight: 700;
 	font-size: 1em;
 	letter-spacing: 2px;
-	color:black;
-	margin: 1.5em;
+	color: black;
+	margin: auto 2%;
 	display: inline-block;
 	text-decoration: none;
+	/* margin-left: 5%; */
+	margin-top: 1.4em;
 }
 
 nav a:hover{
@@ -46,19 +53,21 @@ nav a:hover{
 body{
 	margin: 0;
 	padding: 0;
+	background-color: #FAFAFA;
 }
 
 .small-header{
-	font-size: 0.75rem;
+	font-family: PT Sans;
+	font-size: 1rem;
 	margin: 0;
 	text-transform: uppercase;
-	letter-spacing: 3px;
+	letter-spacing: 0.3em;
 	text-align: center;
 }
 
 /*BANNER SECTION*/
 .banner{
-	margin-top: 4em;
+	margin-top: 2em;
 }
 
 .banner img{
@@ -69,15 +78,18 @@ body{
 
 /*FEATURES SECTION*/
 .features {
-	width: 100%;
-	display: block;
-	float:left;
-	border-bottom: 1px solid #ccc;
+  width: 80%;
+  display: block;
+  float: left;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 2em;
+  padding-top: 2em;
+  margin: auto 10%;
 }
 
 .feature-box{
 	width: 45%;
-	margin: 1.5em 2.5%;
+	margin: 1.5em auto;
 	float: left;
   /*float: none;*/
   	display: block;
@@ -100,7 +112,7 @@ body{
   background-color: rgba(0, 173, 239, 0.75);
   /* margin-top: 125px; */
   vertical-align: middle;
-  padding: 22.2% 0;
+  padding: 21.5% 0;
   opacity: 0;
   margin:0;
   font-family: PT Sans;
@@ -116,7 +128,11 @@ body{
   transition:0.3s;
 }
 
-.new-description-header{
+.new-additions {
+	margin-right:10%;
+}
+
+.section-header{
 	font-family: PT Sans;
 	font-weight: 700;
 	font-size: 2em;
@@ -124,12 +140,27 @@ body{
 	letter-spacing: 0.1em;
 	margin:0;
 	float:none;
+	text-align:center;
+	width:100%;
+	color: #00AEDF;
+}
+
+.new-description-header{
+	font-family: PT Sans;
+	font-weight: 700;
+	font-size: 2em;
+	text-transform: uppercase;
+	letter-spacing: 0.1em;
+	margin:0;
+	margin-top: 0.5em;
+	float:none;
+	font-size: 1.5em;
 }
 
 .new-description-paragraph{
 	font-family: PT Sans;
 	font-size: 0.8em;
-	text-transform: uppercase;
+	/*text-transform: uppercase;*/
 	letter-spacing: 0.1em;
 	margin:0;
 	padding: 0 6em;
@@ -140,12 +171,14 @@ body{
 
 /*EVENTS SECTION*/
 .events {
-	width: 95%;
-	margin: 1em 2.5%;
-	margin-bottom: 4em;
-	display:block;
-	float:left;
-	text-align: center;
+	width: 80%;
+  height: auto;
+  margin: 2em 10%;
+  display: block;
+  float: left;
+  text-align: center;
+  position: relative;
+  /* padding-top: 2em; */
 }
 
 .events-all{
@@ -154,11 +187,11 @@ body{
 }
 
 .events-grid{
-	display: inline-block;
-	width: 33.3333%;
-	height: 10em;
-	float: left;
-	text-align: center;
+  display: inline-block;
+  width: 33.3333%;
+  /* height: 10em; */
+  float: left;
+  text-align: center;
 }
 
 .events-grid img:hover{
@@ -170,12 +203,14 @@ body{
 .events-grid-first img {
 	width:90%;
 	margin-right:10%;
+	height:auto;
 }
 
 .events-grid-mid img {
 	width:90%;
 	margin-right:5%;
 	margin-left:5%;
+	height:auto;
 	-webkit-backface-visibility: hidden;	
 }
 
@@ -190,6 +225,7 @@ body{
 	margin-right:10%;
 	float:right;
 	margin-right:0;
+	height:auto;
 }
 
 .events-grid-last p {
@@ -204,12 +240,13 @@ float:right;
 }
 
 .events-label{
-	font-family: PT Sans;
-	font-size: 0.75em;
-	text-transform: uppercase;
-	letter-spacing: 0.2em;
-	margin:1em 0;
-	width:85%;
+  font-family: PT Sans;
+  font-size: 0.75em;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  margin: 1em 0;
+  width: 85%;
+  margin-bottom: 0;
 }
 /*END OF EVENTS SECTION*/
 
@@ -219,14 +256,14 @@ float:right;
   width: 100%;
   height: auto;
   font-size: 14px;
-/*  background-color: yellow;*/
- 
+  /* background-color: yellow; */
   z-index: 1;
   position: relative;
   box-shadow: 0 -2px 9px 0 rgba(0,0,0,0.1);
   display: inline-block;
   text-align: center;
-  margin-top: 3em;
+  margin-top: 1em;
+  background-color: white;
 }
 
 .footer-icons{
@@ -265,7 +302,7 @@ input:focus {
   text-decoration: none;
   list-style: none;
   border: none;
-  width: 10%;
+  width: 5em;
   padding: 0.75em 1em;
   text-align: center;
   font-family: PT Sans;
@@ -290,7 +327,7 @@ input:focus {
 
 
 /*MOBILE*/
-@media (max-width: 30em){
+@media (max-width: 40em){
 
 	/*HEADER*/
 	header{
@@ -307,7 +344,7 @@ input:focus {
 		width: 100%
 		text-align: center;
 		float: none;
-
+		margin: 0;
 	}
 
 	.head-nav{
@@ -319,6 +356,7 @@ input:focus {
 
 	nav {
 		float:none;
+		text-align: center;
 	}
 	/* END OF HEADER*/
 
@@ -338,6 +376,7 @@ input:focus {
 
 
 	/*EVENTS SECTION*/
+
 	.events-grid {
 		float:none;
 		display:block;
